--- a/front-end/login/index.html
+++ b/front-end/login/index.html
@@ -3,7 +3,7 @@
 </style>
 <script type="text/javascript" src="http://code.jquery.com/jquery-1.5.2.min.js"></script>
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jeditable.js/2.0.2/jquery.jeditable.min.js"></script>
-<script src = "../../nocrypto.js"></script>
+<script src = "../nocrypto.js"></script>
 <script>
 function xPOST(srv,verb,data) {
   return $.ajax({
