--- a/front-end/login/index.html
+++ b/front-end/login/index.html
@@ -115,7 +115,7 @@ $(function() {//called when ready (DOM is built)
 
 
                     </form>
-        <p>(You can login with admin & admin)</p>
+        <p>(You can login with root & secretPassword1)</p>
         </div>
     </div>
 </div>
